--- a/owner/index.html
+++ b/owner/index.html
@@ -42,18 +42,13 @@
     <div id="strike" class="card">
         <h2>Issue Staff Strike</h2>
         <input type="text" id="stName" placeholder="Staff Username">
-        <select id="stLvl">
-            <option>S1</option>
-            <option>S2</option>
-            <option>S3</option>
-            <option>S4</option>
-        </select>
+        <select id="stLvl"><option>S1</option><option>S2</option><option>S3</option><option>S4</option></select>
         <textarea id="stReason" placeholder="Reason for strike..."></textarea>
         <button class="save-btn" style="background:#dc2626" onclick="send('strikes', {name:stName.value, strike_level:stLvl.value, reason:stReason.value, date:new Date().toLocaleString()})">Confirm Strike</button>
     </div>
 
     <script>
-        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24';
+        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24t'; // Updated API
 
         function show(id) {
             document.querySelectorAll('.card').forEach(c => c.classList.remove('active'));
@@ -62,7 +57,6 @@
 
         async function send(sheet, data) {
             const btn = event.target;
-            const originalText = btn.innerText;
             btn.innerText = "Sending...";
             btn.disabled = true;
 
@@ -72,11 +66,11 @@
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify({ data: [data] })
                 });
-                alert("Successfully saved to " + sheet + "!");
+                alert("Successfully saved!");
                 location.reload();
             } catch (err) {
                 alert("Error saving data.");
-                btn.innerText = originalText;
+                btn.innerText = "Try Again";
                 btn.disabled = false;
             }
         }
