--- a/leadership/index.html
+++ b/leadership/index.html
@@ -11,8 +11,9 @@
         .nav-item { padding: 12px; border-radius: 8px; color: var(--text); cursor: pointer; transition: 0.2s; margin-bottom: 5px; }
         .nav-item:hover { background: #1e293b; color: white; }
         .nav-item.active { background: var(--accent); color: white; }
-        .main { flex: 1; padding: 40px; }
-        .card { background: #1e293b; padding: 25px; border-radius: 12px; max-width: 600px; border: 1px solid #334155; }
+        .main { flex: 1; padding: 40px; overflow-y: auto; }
+        .card { background: #1e293b; padding: 25px; border-radius: 12px; max-width: 600px; border: 1px solid #334155; display: none; }
+        .card.active { display: block; }
         input, textarea, select { width: 100%; padding: 12px; margin: 10px 0; background: #0b1120; border: 1px solid #334155; color: white; border-radius: 6px; box-sizing: border-box; font-size: 16px; }
         button { background: var(--accent); color: white; border: none; padding: 12px 20px; border-radius: 6px; cursor: pointer; font-weight: bold; width: 100%; font-size: 16px; }
         
@@ -26,28 +27,92 @@
 <body>
     <div class="sidebar">
         <div class="logo">👮 Leadership</div>
-        <div class="nav-item active">⚖️ Issue Strike</div>
+        <div id="navStrike" class="nav-item active" onclick="showTab('strikeTab', this)">⚖️ Issue Strike</div>
+        <div id="navRequest" class="nav-item" onclick="showTab('requestTab', this)">📩 Request Action</div>
         <div class="nav-item" onclick="window.location.href='/view/'">📋 View Database</div>
     </div>
+
     <div class="main">
-        <div class="card">
+        <div id="strikeTab" class="card active">
             <h2>Issue Staff Strike</h2>
             <input type="text" id="target" placeholder="Staff Username">
-            <select id="lvl"><option>S1</option><option>S2</option><option>S3</option><option>S4</option></select>
+            <select id="lvl">
+                <option>Verbal Warning</option>
+                <option>S1</option>
+                <option>S2</option>
+                <option>S3</option>
+                <option>S4</option>
+            </select>
             <textarea id="res" rows="4" placeholder="Reason..."></textarea>
             <button id="subBtn" onclick="sendStrike()">SUBMIT STRIKE</button>
         </div>
+
+        <div id="requestTab" class="card">
+            <h2>Request Action (Owner Approval)</h2>
+            <p style="color: #94a3b8; font-size: 0.8rem; margin-top: -10px;">Requires Owner review</p>
+            <input type="text" id="reqTarget" placeholder="Staff Username">
+            <select id="reqType">
+                <option value="Demotion">Demotion</option>
+                <option value="Firing">Firing</option>
+                <option value="Promotion">Promotion</option>
+            </select>
+            <textarea id="reqRes" rows="4" placeholder="Reason for this request..."></textarea>
+            <button id="reqBtn" onclick="sendRequest()" style="background: #ec4899;">SEND REQUEST</button>
+        </div>
     </div>
+
     <script>
+        const API_BASE = 'https://sheetdb.io/api/v1/nsqoeik98h24t';
+
+        // Tab Switching Logic
+        function showTab(tabId, el) {
+            document.querySelectorAll('.card').forEach(c => c.classList.remove('active'));
+            document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
+            document.getElementById(tabId).classList.add('active');
+            el.classList.add('active');
+        }
+
+        // Send Strike (Direct to Strikes Sheet)
         async function sendStrike() {
-            const API = 'https://sheetdb.io/api/v1/nsqoeik98h24t?sheet=strikes';
             const btn = document.getElementById('subBtn');
             btn.innerText = "Saving...";
-            const data = { name: document.getElementById('target').value, strike_level: document.getElementById('lvl').value, reason: document.getElementById('res').value, date: new Date().toLocaleString() };
+            const data = { 
+                name: document.getElementById('target').value, 
+                strike_level: document.getElementById('lvl').value, 
+                reason: document.getElementById('res').value, 
+                date: new Date().toLocaleString() 
+            };
             try {
-                await fetch(API, { method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify({ data: [data] }) });
-                alert("Strike Logged!"); location.reload();
+                await fetch(API_BASE + '?sheet=strikes', { 
+                    method: 'POST', 
+                    headers: {'Content-Type': 'application/json'}, 
+                    body: JSON.stringify({ data: [data] }) 
+                });
+                alert("Strike/Warning Logged!"); 
+                location.reload();
             } catch (err) { alert("Error."); btn.innerText = "SUBMIT STRIKE"; }
+        }
+
+        // Send Request (To Requests Sheet for Approval)
+        async function sendRequest() {
+            const btn = document.getElementById('reqBtn');
+            btn.innerText = "Sending...";
+            const data = { 
+                name: document.getElementById('reqTarget').value, 
+                type: document.getElementById('reqType').value, 
+                reason: document.getElementById('reqRes').value, 
+                status: "PENDING",
+                date: new Date().toLocaleString() 
+            };
+            try {
+                await fetch(API_BASE + '?sheet=requests', { 
+                    method: 'POST', 
+                    headers: {'Content-Type': 'application/json'}, 
+                    body: JSON.stringify({ data: [data] }) 
+                });
+                alert("Request sent to Ownership!"); 
+                location.reload();
+            } catch (err) { alert("Error."); btn.innerText = "SEND REQUEST"; }
         }
     </script>
 </body>
