--- a/leadership/index.html
+++ b/leadership/index.html
@@ -34,10 +34,11 @@
 
     <div class="main">
         <div id="strikeTab" class="card active">
-            <h2>Issue Staff Strike</h2>
+            <h2>Issue Staff punishment</h2>
             <input type="text" id="target" placeholder="Staff Username">
             <select id="lvl">
                 <option>Verbal Warning</option>
+                <option>Warning</option>
                 <option>S1</option>
                 <option>S2</option>
                 <option>S3</option>
