--- a/leadership/index.html
+++ b/leadership/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://sheetdb.io/api/v1/nsqoeik98h24t';
+        const API_BASE = 'https://script.google.com/macros/s/AKfycbzrETK92Nwrb_A6b6ezp41oZNR_rTJRxFHTwmLoaBMwaqSPGoD_K-sw631jYghmyjAd/exec';
 
         // Tab Switching Logic
         function showTab(tabId, el) {
