--- a/owner.ship.team/index.html
+++ b/owner.ship.team/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <script>
-        const API = 'https://script.google.com/macros/s/AKfycbzrETK92Nwrb_A6b6ezp41oZNR_rTJRxFHTwmLoaBMwaqSPGoD_K-sw631jYghmyjAd/exec';
+        const API = 'https://formspree.io/f/mrelrada';
 
         function show(id, el) {
             document.querySelectorAll('.card').forEach(c => c.classList.remove('active'));
