--- a/leadership/index.html
+++ b/leadership/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://script.google.com/macros/s/AKfycbzrETK92Nwrb_A6b6ezp41oZNR_rTJRxFHTwmLoaBMwaqSPGoD_K-sw631jYghmyjAd/exec';
+        const API_BASE = 'https://formspree.io/f/mrelrada';
 
         // Tab Switching Logic
         function showTab(tabId, el) {
