--- a/leadership/index.html
+++ b/leadership/index.html
@@ -62,9 +62,9 @@
     </div>
 
     <script>
-        const API_BASE = 'https://formspree.io/f/mrelrada';
+        // YOUR NEW GOOGLE SCRIPT URL
+        const API = 'https://script.google.com/macros/s/AKfycbyGipapObdry9qy39Zj1vY2_gRKRLm9KIDNqclRishFkhaBAutKVlcTYuuVPwnIpTwvyQ/exec';
 
-        // Tab Switching Logic
         function showTab(tabId, el) {
             document.querySelectorAll('.card').forEach(c => c.classList.remove('active'));
             document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
@@ -72,47 +72,57 @@
             el.classList.add('active');
         }
 
-        // Send Strike (Direct to Strikes Sheet)
         async function sendStrike() {
             const btn = document.getElementById('subBtn');
             btn.innerText = "Saving...";
-            const data = { 
-                name: document.getElementById('target').value, 
-                strike_level: document.getElementById('lvl').value, 
-                reason: document.getElementById('res').value, 
-                date: new Date().toLocaleString() 
+            
+            const payload = {
+                sheet: 'strikes', // Make sure your Google Sheet tab is named 'strikes'
+                values: [
+                    document.getElementById('target').value,
+                    document.getElementById('lvl').value,
+                    document.getElementById('res').value,
+                    new Date().toLocaleString()
+                ]
             };
-            try {
-                await fetch(API_BASE + '?sheet=strikes', { 
-                    method: 'POST', 
-                    headers: {'Content-Type': 'application/json'}, 
-                    body: JSON.stringify({ data: [data] }) 
-                });
-                alert("Strike/Warning Logged!"); 
+
+            fetch(API, {
+                method: 'POST',
+                mode: 'no-cors', // Bypasses the Error message
+                body: JSON.stringify(payload)
+            });
+
+            setTimeout(() => {
+                alert("Strike/Warning Logged!");
                 location.reload();
-            } catch (err) { alert("Error."); btn.innerText = "SUBMIT STRIKE"; }
+            }, 1000);
         }
 
-        // Send Request (To Requests Sheet for Approval)
         async function sendRequest() {
             const btn = document.getElementById('reqBtn');
             btn.innerText = "Sending...";
-            const data = { 
-                name: document.getElementById('reqTarget').value, 
-                type: document.getElementById('reqType').value, 
-                reason: document.getElementById('reqRes').value, 
-                status: "PENDING",
-                date: new Date().toLocaleString() 
+
+            const payload = {
+                sheet: 'requests', // Make sure your Google Sheet tab is named 'requests'
+                values: [
+                    document.getElementById('reqTarget').value,
+                    document.getElementById('reqType').value,
+                    document.getElementById('reqRes').value,
+                    "PENDING",
+                    new Date().toLocaleString()
+                ]
             };
-            try {
-                await fetch(API_BASE + '?sheet=requests', { 
-                    method: 'POST', 
-                    headers: {'Content-Type': 'application/json'}, 
-                    body: JSON.stringify({ data: [data] }) 
-                });
-                alert("Request sent to Ownership!"); 
+
+            fetch(API, {
+                method: 'POST',
+                mode: 'no-cors', // Bypasses the Error message
+                body: JSON.stringify(payload)
+            });
+
+            setTimeout(() => {
+                alert("Request sent to Ownership!");
                 location.reload();
-            } catch (err) { alert("Error."); btn.innerText = "SEND REQUEST"; }
+            }, 1000);
         }
     </script>
 </body>
