--- a/owner.ship.team/index.html
+++ b/owner.ship.team/index.html
@@ -45,6 +45,7 @@
 
 
         .sidebar { width: 250px; background: var(--side); padding: 20px; border-right: 1px solid #1e293b; display: flex; flex-direction: column; flex-shrink: 0; box-sizing: border-box; }
+        <div class="nav-item" onclick="show('loa', this)">✈️ Manage LOA</div>
 
         .logo { font-weight: bold; font-size: 1.2rem; margin-bottom: 10px; color: var(--accent); }
 
@@ -160,7 +161,16 @@
 
         </div>
 
-
+<div id="loa" class="card">
+    <h2>Manage Leave of Absence</h2>
+    <input type="text" id="lName" placeholder="Staff Username">
+    <div style="display: flex; gap: 10px;">
+        <input type="text" id="lStart" placeholder="Start Date">
+        <input type="text" id="lEnd" placeholder="End Date">
+    </div>
+    <textarea id="lReason" placeholder="Reason for leave..."></textarea>
+    <button style="background: #f59e0b; color: #000;" onclick="handleLOA()">Authorize LOA</button>
+</div>
 
         <div id="strike" class="card">
 
@@ -278,7 +288,20 @@
 
         }
 
-
+async function handleLOA() {
+    const data = {
+        sheet: 'loa',
+        values: [
+            document.getElementById('lName').value,
+            document.getElementById('lStart').value,
+            document.getElementById('lEnd').value,
+            document.getElementById('lReason').value
+        ]
+    };
+    await apiPost(data);
+    alert("LOA Logged!");
+    location.reload();
+}
 
         async function handleStrike() {
 
