--- a/owner.ship.team/index.html
+++ b/owner.ship.team/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <script>
-        const API = 'YOUR_GOOGLE_APPS_SCRIPT_URL';
+        const API = 'https://script.google.com/macros/s/AKfycbyGipapObdry9qy39Zj1vY2_gRKRLm9KIDNqclRishFkhaBAutKVlcTYuuVPwnIpTwvyQ/exec';
 
         function show(id, el) {
             document.querySelectorAll('.card').forEach(c => c.classList.remove('active'));
