--- a/leadership/index.html
+++ b/leadership/index.html
@@ -25,6 +25,7 @@
     </style>
 </head>
 <body>
+     <div class="demo-banner">⚠️ DEMO ENVIRONMENT</div>
     <div class="sidebar">
         <div class="logo">👮 Leadership</div>
         <div id="navStrike" class="nav-item active" onclick="showTab('strikeTab', this)">⚖️ Issue Strike</div>
