--- a/owner.ship.team/index.html
+++ b/owner.ship.team/index.html
@@ -54,7 +54,7 @@
         <div class="nav-item active" onclick="showTab('requestsTab', this)">📩 Action Requests</div>
         <div class="nav-item" onclick="showTab('strikesTab', this)">⚖️ Strike History</div>
         
-        <a href="INSERT_PUBLIC_LOGS_LINK" target="_blank" class="nav-item" style="margin-top: auto; border-top: 1px solid #334155; padding-top: 20px;">🌐 Go to Public Site</a>
+        <a href="<div class="nav-item" onclick="window.location.href='/view/'">📋 View Database</div>" target="_blank" class="nav-item" style="margin-top: auto; border-top: 1px solid #334155; padding-top: 20px;">🌐 Go to Public Site</a>
     </div>
 
     <div class="main">
