--- a/owner.ship.team/index.html
+++ b/owner.ship.team/index.html
@@ -42,7 +42,8 @@
         <div class="nav-item" onclick="show('staff', this)">👥 Add Staff</div>
         <div class="nav-item" onclick="show('loa', this)">✈️ Manage LOA</div>
         <div class="nav-item" onclick="show('strike', this)">⚠️ Issue Strike</div>
-        <a href="#" class="view-site">🌐 View Public Site</a>
+        <a href="../view/index.html" class="view-site">🌐 View Public Site</a>
+
     </div>
     <div class="main">
         <div id="ann" class="card active">
@@ -84,6 +85,8 @@
                 <option value="Strike 1">Strike 1</option>
                 <option value="Strike 2">Strike 2</option>
                 <option value="Strike 3">Strike 3</option>
+                <option value="Strike 3">Strike 4</option>
+                <option value="Strike 3">Strike 5</option>
             </select>
             <textarea id="stReason" placeholder="Reason..."></textarea>
             <button class="btn-primary" style="background: #ef4444;" onclick="handleStrike()">Issue Strike</button>
